Fixed cropping of header + added backup js and css files

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -534,7 +534,9 @@ a:hover, .figma-link-jump:hover {
 
 .header-image {
   display: block;
-	max-width: 100vh;
+  max-width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
 #header-subtext {
@@ -558,7 +560,7 @@ a:hover, .figma-link-jump:hover {
 }
 
 #project-header-container {
-  margin-top: 60vh;
+  margin-top: 50vh;
   width: 100%;
 }
 
